tests/fail/eksiksiz-örüntü-üçüncü.kip
(bu tam-sayı listesinin) üçüncüsü,
  bu boşsa, 0,
  a'nın (b'nin (c'nin d'ye ekine) ekine) ekiyse, c'dir.
